- fix bug: cell overflow should be hidden so content won't overflow and    cover following cells if size is fixed.

--- a/src/index.styl
+++ b/src/index.styl
@@ -32,6 +32,7 @@ initabs()
     line-height: 26px
     box-sizing: border-box
     white-space: pre
+    overflow: hidden
   .cell.idx
     z-index: 100
     background: #f1f2f3
